# barsmith

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  audit.toml
.cargo/: config.toml
.github/workflows/: ci.yml  parity.yml  security.yml
barsmith_builtin/: Cargo.toml
barsmith_builtin/src/: lib.rs
barsmith_cli/: Cargo.toml
barsmith_cli/src/: cli.rs  main.rs  stats_detail.rs
barsmith_cli/tests/: cli_smoke.rs
barsmith_rs/: Cargo.toml
barsmith_rs/src/: asset.rs  backtest.rs  combinator.rs  config.rs  data.rs  feature.rs  lib.rs  mask.rs  pipeline.rs  progress.rs  s3.rs  stats.rs  storage.rs
barsmith_rs/tests/: csv_fingerprint_consistency.rs  pipeline_depth_reuse.rs  progress_tracker.rs  resume_bounds.rs  resume_catalog.rs  scalar_bounds_structure.rs  strict_min_and_comparison_pruning.rs  top_results.rs  unranking.rs
custom_rs/: Cargo.toml  feature_ranges.json
custom_rs/src/: engineer.rs  features.rs  lib.rs  thresholds.rs
custom_rs/tests/: boolean_features.rs  catalog_order.rs  date_filtering_prepare.rs  desktop_indicator_parity.rs  feature_catalog.rs  pipeline_resume.rs  pipeline_smoke.rs  prepared_hash_guard.rs  tribar_target.rs
docs/: README.md  architecture.md  cli.md  data-contract.md  development.md  engines.md  outputs.md  performance.md  quickstart.md  runs.md  troubleshooting.md
scripts/: profile_es_pre2025.sh  query_results.py  run_caffeinate_logged.sh  run_parity_all.sh
tests/data/: ohlcv_tiny.csv
