[package]
name = "barsmith_cli"
version = "0.1.0"
edition = "2024"
description = "CLI for Barsmith: feature combination search over engineered OHLCV data."
license = "MIT"
repository = "https://github.com/psdon/barsmith"
readme = "../README.md"
rust-version = "1.85"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
chrono = { version = "0.4.42", default-features = false, features = ["std"] }
barsmith_rs = { path = "../barsmith_rs", features = ["simd-eval"] }
barsmith_builtin = { path = "../barsmith_builtin" }

[dev-dependencies]
tempfile = "3.12"
