[package]
name = "barsmith_rs"
version = "0.1.0"
edition = "2024"
description = "Core library for Barsmith: combination enumeration, evaluation, and storage."
license = "MIT"
repository = "https://github.com/psdon/barsmith"
readme = "../README.md"
rust-version = "1.85"

[features]
simd-eval = []

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.42", default-features = false, features = ["std", "serde"] }
csv = "1.3"
itertools = "0.12"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
polars = { version = "0.39", features = ["lazy", "strings", "parquet"] }
duckdb = { version = "1.4.2", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
once_cell = "1.19"
ahash = "0.8"

[dev-dependencies]
tempfile = "3.12"
